syntax = "proto3";

option java_package= "io.github.pavelshe11.authmicro.grpc";
option java_outer_classname = "CheckIsAdminProto";

service CheckIsAdminService {
  rpc CheckIsAdmin (CheckIsAdminRequest) returns (CheckIsAdminResponse);
}

message CheckIsAdminRequest {
  string accountId = 1;
}


message CheckIsAdminResponse {
  bool isAdmin = 1;
}